--- a/abt-us.html
+++ b/abt-us.html
@@ -45,11 +45,11 @@
     <br>
     <!--Main Page below this line-->
 
-    <div class="abt" id="abt_aaron">
+    <div class="abt" id="abt_andrew">
     <img src="IMG_5154.jpg" style="width:100px; height:125px;">
     </div>
 
-    <div class = "abt">
+    <div class = "abt" id="abt_aaron">
         <img src="IMG_5154.jpg" style="width:100px; height:125px;">
     </div>
 
