hope this works

--- a/news.html
+++ b/news.html
@@ -46,9 +46,9 @@
     <!---Main page down here-->
 
     <div class = "newsbio" style="transform:translateX(30px);">
-        <h2>Scrimmage not on Saturday!!!</h2>
+        <h2>Scrimmage IS on Saturday!!!</h2>
         <br>
-        <p>This is me talking about the scrimmage not tomorrow. I hope this works and That everyone will be at the scrimmage because it's super important!</p>
+        <p>This is me talking about the scrimmage TOMORROW. I hope this works and That everyone will be at the scrimmage because it's super important! LOVE LEAGUSE MEETS! LOL FOR THE WIN</p>
     </div>
 
 </body>
