working on abt page

--- a/abt-us.html
+++ b/abt-us.html
@@ -45,13 +45,46 @@
     <br>
     <!--Main Page below this line-->
 
-    <div class="abt" id="abt_andrew">
-    <img src="IMG_5154.jpg" style="width:100px; height:125px;">
+    <h1>Meet the team <span style="font-size:10px; text-align:center;">(With our personalised business cards!)</span></h1>
+
+<div id="boxforid">
+
+    <div class="abt">
+        <div class="abt_flip">
+            <div class="abtfrontcont" id="abt_andrew">
+                <img src="IMG_5154.jpg" style="width:100px; height:125px;">
+            </div>
+            <!---class divider-->
+            <div class="abtflipcont">
+                <div>Andrew A. Ortiz; Team Captain<br>Heart of the team</div>
+            </div>
+        </div>
     </div>
 
-    <div class = "abt" id="abt_aaron">
-        <img src="IMG_5154.jpg" style="width:100px; height:125px;">
+    <div class = "abt">
+        <div class="abt_flip">
+            <div class="abtfrontcont" id="abt_aaron">
+                <img src="IMG_5154.jpg" style="width:100px; height:125px; transform:translateX(-90px);">
+            </div>
+            <!---class divider-->
+            <div class="abtflipcont">
+                <div>Aaron Bocanegra; Lead Programmer.<br>works </div>
+            </div>;
+        </div>
     </div>
 
+    <div class = "abt">
+        <div class="abt_flip">
+            <div class="abtfrontcont" id="abt_dia">
+                <div>Dia DAVIS</div>
+            </div>
+            <!---class divider-->
+            <div class="abtflipcont">
+                <div>Dia Davis; Web Developer (Programmer)<br>Rookie to team and new to coding</div>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
