--- a/abt-us.html
+++ b/abt-us.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="script" href="script.js">
-    <link rel="stylesheet" href="imageeditor.css"
+    <link rel="stylesheet" href="imageeditor.css">
+    <link rel="stylesheet" href="fonts.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
