--- a/abt-us.html
+++ b/abt-us.html
@@ -77,7 +77,7 @@
     <div class = "abt">
         <div class="abt_flip">
             <div class="abtfrontcont" id="abt_dia">
-                <div>Dia DAVIS</div>
+                <div style="font-family:EBGaramondSC">Dia DAVIS</div>
             </div>
             <!---class divider-->
             <div class="abtflipcont">
